--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,9 @@
-numpy
-langchain
-langchain_groq
-langchain_core
-langchain_community
-pymongo
 fastapi
 uvicorn
-python-multipart
-
-
-# .\venv\Scripts\Activate
-# pip install -r requirements.txt
-# python -m streamlit run app.py
+pymongo
+python-dotenv
+langchain
+langchain-core
+langchain-community
+langchain-groq
+pydantic
